--- a/package.json
+++ b/package.json
@@ -5,8 +5,6 @@
   "type": "module",
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
-    "express": "^4.21.2",
-    "multer": "^1.4.5-lts.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3"
@@ -15,8 +13,8 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "server": "node server.js",
-    "start": "concurrently \"npm run server\" \"npm run dev\""
+    "server": "cd server && node index.js",
+    "start": "concurrently \"npm run dev\" \"npm run server\""
   },
   "browserslist": {
     "production": [
@@ -36,6 +34,6 @@
     "@vitejs/plugin-react": "^4.2.1",
     "concurrently": "^8.2.2",
     "json-server": "^1.0.0-beta.3",
-    "vite": "^5.1.0"
+    "vite": "^6.3.5"
   }
 }
